--- a/app/lab1/src/main/res/values/strings.xml
+++ b/app/lab1/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Lab1</string>
+    <string name="hide_rb">Hide</string>
+    <string name="show_rb">Show</string>
+    <string name="ok_btn">OK</string>
+    <string name="retrieved_pass">Your password: %1$s</string>
 </resources>
